--- a/beringeiclient/pom.xml
+++ b/beringeiclient/pom.xml
@@ -49,5 +49,12 @@
 			<artifactId>util</artifactId>
 			<version>0.1.29</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
+		<dependency>
+		    <groupId>commons-cli</groupId>
+		    <artifactId>commons-cli</artifactId>
+		    <version>1.2</version>
+		</dependency>
 	</dependencies>
 </project>
