--- a/TSPark/pom.xml
+++ b/TSPark/pom.xml
@@ -43,7 +43,14 @@
 			<artifactId>beringeiclient</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		
+
+
+		<dependency>
+			<groupId>com.facebook.jcommon</groupId>
+			<artifactId>util</artifactId>
+			<version>0.1.29</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -56,7 +63,7 @@
 			<artifactId>atomix-all</artifactId>
 			<version>1.0.0-rc9</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.eclipse.jetty.aggregate/jetty-all-server -->
 		<dependency>
 			<groupId>org.eclipse.jetty.aggregate</groupId>
