--- a/beringeiclient/pom.xml
+++ b/beringeiclient/pom.xml
@@ -39,15 +39,9 @@
 	
 	<dependencies>
 		<dependency>
-			<groupId>com.facebook</groupId>
-			<artifactId>thrift</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.facebook.jcommon</groupId>
-			<artifactId>util</artifactId>
-			<version>0.1.29</version>
+			<groupId>org.apache.thrift</groupId>
+			<artifactId>libthrift</artifactId>
+			<version>0.10.0</version>
 		</dependency>
 	</dependencies>
 </project>
